# stratum_v2

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.txt  Cargo.toml  DELIVERY_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  NOISE_HANDSHAKE.md  PRODUCTION_PATTERNS.md  PROJECT_SUMMARY.md  config.toml  readme.md  start.sh
src/: main.rs
src/common/: error.rs  mod.rs  types.rs
src/node/: mod.rs
src/pool/: mod.rs  sv2_messages.rs
src/ui/: mod.rs
